tests/compile-fail/fn_wrong_arg_type.rs
#[macro_use] extern crate bevy_fn_plugin;

#[bevy_plugin]
fn fn_weird_arg(_: usize) {}

fn main() {}
